apps/sonarr/service-sonarr-metrics-nodeport.yaml
---
# Exportarr sidecar exposes Sonarr metrics on port 9707
apiVersion: v1
kind: Service
metadata:
  name: sonarr-metrics-nodeport
  namespace: sonarr
  labels:
    app: sonarr
    app.kubernetes.io/component: metrics
spec:
  type: NodePort
  ports:
    - name: metrics
      port: 9707
      targetPort: 9707
      nodePort: 30110
      protocol: TCP
  selector:
    app: sonarr
