apps/sonarr/ingressroute-sonarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.xrs444.net`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
